# pokemon_tcg_ai

./: README.md  package.json  run-dev-tmux.sh
client/: .env.development  .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.vite.json
client/src/: App.tsx  boardState.ts  index.css  main.tsx
client/src/McFlex/: McFlex.tsx
client/src/McGrid/: McGrid.tsx
client/src/audio/: audio.ts
client/src/components/: Active.tsx  Agent.tsx  Bench.tsx  Deck.tsx  Discard.tsx  Game.tsx  Hand.tsx  HomePage.tsx  LostZone.tsx  PlayerState.tsx  PrizeCards.tsx  Slide.tsx  SpotlightDemo.tsx  SpotlightableCard.tsx  Stadium.tsx  TurnConsole.tsx
client/src/hooks/: useSpotlight.ts
client/src/services/: aiService.ts  api.ts
client/src/theme/: buttonTheme.ts  colorTheme.ts  inputTheme.ts  theme.ts
common/: boardState.ts  cardList.json  gardevoir-deck.json  pikachu-deck.json
server/: .gitignore  README.md  app.py  pokemon_tcg_example.py  pyproject.toml  updated_game_state.json
server/examples/: visualize_graph.py
server/pktcgai/: state.py
server/pktcgai/chains/: mentor.py  player.py  referee.py
server/pktcgai/graph/: __init__.py  pokemon_tcg_graph.py
server/pktcgai/llm/: ai.py
server/pktcgai/routes/: endpoints.py
server/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/text/: rules.txt
testing/: README.md  anthropic_langchain_example.py  requirements.txt
